# iarc_simulation_tools

./: CMakeLists.txt  Dockerfile  README.md  package.xml  test_script.sh
.circleci/: config.yml
gazebo_ros_link_attacher/: CMakeLists.txt  package.xml
iarc_battery_plugin/: CMakeLists.txt  package.xml
iarc_battery_plugin/include/iarc_battery_plugin/: battery_plugin.hpp
iarc_battery_plugin/src/: battery_plugin.cpp
iarc_grabber_plugin/: CMakeLists.txt  package.xml
iarc_grabber_plugin/include/iarc_grabber_plugin/: grabber_plugin.hpp
iarc_grabber_plugin/src/: grabber_plugin.cpp
iarc_gripper_plugin/: CMakeLists.txt  package.xml
iarc_magnet_plugin/: CMakeLists.txt  package.xml
iarc_magnet_plugin/include/iarc_magnet_plugin/: dipole_magnet.hpp
iarc_magnet_plugin/src/: dipole_magnet.cpp
iarc_motor_plugin/: CMakeLists.txt  package.xml
iarc_service_plugin/: CMakeLists.txt  package.xml
iarc_sim_test_tools/: CMakeLists.txt  package.xml
iarc_sim_test_tools/include/iarc_sim_test_tools/: common.h  variable_load_plugin.hpp
iarc_sim_test_tools/src/: variable_load_plugin.cpp
iarc_simulation_msgs/: CMakeLists.txt  package.xml
iarc_simulation_tools/: package.xml
iarc_simulation_tools/launch/: default.launch  mav_hovering_example.launch
iarc_simulation_tools/models/box/: model.sdf
iarc_simulation_tools/models/communications_module/: model.config  model.sdf
iarc_simulation_tools/models/communications_module/meshes/: communications_module.dae
iarc_simulation_tools/models/dish/: model.sdf
iarc_simulation_tools/models/flag/: model.config  model.sdf
iarc_simulation_tools/models/grabber/: model.config  model.sdf
iarc_simulation_tools/models/grabber/meshes/: body.dae  grabber_hand_left.stl  grabber_hand_right.stl  left_actuator.dae  main_body.stl  revolute_plate.dae  revolute_plate_new.stl  right_actuator.dae  servoPlate.dae  servo_plate_v1.stl
iarc_simulation_tools/models/gripper/: model.config  model.sdf
iarc_simulation_tools/models/gripper/meshes/: conectorrod.dae  flatrod.dae  joint1.dae  joint2.dae  joint_long.dae  joint_short.dae  new_rodV2.dae  screwrod.dae
iarc_simulation_tools/models/gun/: model.config  model.sdf
iarc_simulation_tools/models/led_light/: model.sdf
iarc_simulation_tools/models/led_light_green/: model.sdf
iarc_simulation_tools/models/led_light_red/: model.sdf
iarc_simulation_tools/models/magnet/: model.sdf
iarc_simulation_tools/models/mast/: model.sdf
iarc_simulation_tools/models/mast/meshes/: Collision_mast_noBox.dae  mast_big_boxes.dae  mast_no_box.dae  mast_thin_box.dae
iarc_simulation_tools/models/mast_modified/: model.config  model.sdf
iarc_simulation_tools/models/pylon/: model.sdf
iarc_simulation_tools/models/quadplane/: model.sdf
iarc_simulation_tools/models/quadplane/meshes/: front_prop.dae
iarc_simulation_tools/models/quadrotor/: model.config  model.sdf
iarc_simulation_tools/models/quadrotor/meshes/: Struct_rod.dae  baSE_plate.dae  jetson.dae  motor_mount.dae  pixhawk.dae  plate.dae  quadrotor.dae  quadrotor_1.dae  quadrotor_2.dae  simple_quadrotorV0.dae  simple_quadrotorV1.dae  top_cover.dae
iarc_simulation_tools/models/radar/: model.sdf
iarc_simulation_tools/models/ship_model/: model.config  model.sdf
iarc_simulation_tools/models/table/: model.config  model.sdf
iarc_simulation_tools/models/table_with_comm_block/: model.config  model.sdf
iarc_simulation_tools/models/takeoff_base/: model.config  model.sdf
iarc_simulation_tools/models/takeoff_zone/: model.sdf
iarc_simulation_tools/resources/: nonlinear_mpc_quadrotor.yaml
iarc_simulation_tools/resources/mpc_control/: PID_attitude_quadrotor.yaml
iarc_simulation_tools/resources/rotor_control/: lee_controller_quadrotor.yaml  quadrotor.yaml  roll_pitch_yawrate_thrust_controller_quadrotor.yaml
iarc_simulation_tools/src/: light_plugin.cpp  link_state_publisher.cpp
iarc_simulation_tools/urdf/: gazebo_wind_plugin.xacro  mav.xacro  quadrotor.xacro  quadrotor_base.xacro  rgbd_camera.xacro  variable_load.xacro
iarc_simulation_tools/worlds/: default.world  default_waves.world  default_with_visual.world  dipole_magnet.world  integrated.world  static_comm_block.world  waves.world  waves_and_table.world  waves_without_visual.world
iarc_state_plugins/: CMakeLists.txt  package.xml
iarc_wave_sim/: LICENSE_THIRDPARTY  README.md
iarc_wave_sim/iarc_wave_sim/: CMakeLists.txt  package.xml
iarc_wave_sim/iarc_wave_sim_gazebo/: CMakeLists.txt  package.xml
iarc_wave_sim/iarc_wave_sim_gazebo/include/iarc_wave_sim_gazebo/: ros_sea_state_subscriber.hpp  seastate.hpp
iarc_wave_sim/iarc_wave_sim_gazebo/launch/: box.launch  mumbles_head_world.launch  ocean_world.launch  sea_state.launch
iarc_wave_sim/iarc_wave_sim_gazebo/models/barrage/: model.sdf
iarc_wave_sim/iarc_wave_sim_gazebo/models/box/: model.sdf
iarc_wave_sim/iarc_wave_sim_gazebo/models/spherical_buoy/: model.sdf
iarc_wave_sim/iarc_wave_sim_gazebo/src/: ros_sea_state_subscriber.cpp  ros_sea_state_subscriber_node.cpp
iarc_wave_sim/iarc_wave_sim_gazebo/world_models/ocean_waves/: model.sdf
iarc_wave_sim/iarc_wave_sim_gazebo/world_models/ocean_waves/materials/scripts/: waves.material
iarc_wave_sim/iarc_wave_sim_gazebo/worlds/: box.world
iarc_wind_plugin/: CMakeLists.txt  package.xml
iarc_wind_plugin/config/: params.yaml
iarc_wind_plugin/include/iarc_wind_plugin/: wind_plugin.hpp
iarc_wind_plugin/src/: wind_plugin.cpp
launch/: default.launch
msg/: var_load.msg
plugins/: CMakeLists.txt  package.xml
plugins/include/plugins/: orientation_controller_example.hpp
plugins/src/: example_plugin.cpp  orientation_controller_example.cpp
src/: check.cpp  dipole_magnet.cc  dipole_magnet.cpp  light_plugin.cpp  link_state_publisher.cpp  plot.py  realsense_plugin.cpp  revolute_joint_rotator_plugin.cpp  ros_bridge.cpp  ros_sea_state_subscriber.cpp  ros_sea_state_subscriber_node.cpp  variable_load_plugin.cpp  wind_plugin.cc  wind_plugin.cpp
urdf/: custom_wind.xacro  firefly.gazebo  firefly_copy.xacro  firefly_wind.xacro  multirotor_base_copy.xacro  realsense.xacro  (+1 more)
(+141 files in other folders)
