<?xml version="1.0"?>
<package format="2">
    <name>iarc_simulation_tools</name>
    <version>0.0.1</version>
    <description>Simulation environment for IARC Mission 9</description>
    <maintainer email="aerialroboticsiitk@gmail.com">aerial-robotics-iitk-bot</maintainer>

    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>
    <buildtool_depend>catkin_simple</buildtool_depend>
    <depend>gazebo_ros</depend>
    <depend>eigen_conversions</depend>
    <depend>geometry_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>message_generation</depend>
    <depend>message_runtime</depend>
    <depend>std_msgs</depend>

    <export>
        <gazebo_ros gazebo_model_path="${prefix}/models"/>
        <gazebo_ros gazebo_resource_path="${prefix}/models"/>
	      <gazebo_ros gazebo_plugin_path="${prefix}/lib" gazebo_media_path="${prefix}"/>
    </export>
</package>
