<?xml version="1.0"?>
<package format="2">
  <name>iarc_battery_plugin</name>
  <version>0.0.0</version>
  <description>The iarc_battery_plugin package</description>

  <maintainer email="varun@todo.todo">varunk122</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>

  <export>
    <gazebo_ros plugin_path="${prefix}/../../lib" gazebo_media_path="${prefix}" />
</export>

</package>
