<?xml version="1.0"?>
<package format="2">
  <name>iarc_grabber_plugin</name>
  <version>0.0.0</version>
  <description>The iarc_grabber_plugin package</description>

  <maintainer email="isro@todo.todo">isro</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>roscpp</depend>

</package>