<?xml version="1.0"?>
<package format="2">
  <name>iarc_wind_plugin</name>
  <version>0.0.0</version>
  <description>The iarc_wind_plugin package</description>

  <maintainer email="isro@todo.todo">isro</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_sample</buildtool_depend>
  <depend>iarc_sim_test_tools</depend>
  <depend>gazebo</depend>
  <depend>xacro</depend>
  <depend>roscpp</depend>
  <depend>yaml-cpp</depend>

</package>
