<?xml version="1.0"?>
<package format="2">
  <name>plugins</name>
  <version>0.0.0</version>
  <description>The plugins package</description>

  <maintainer email="kabeer@iitk.ac.in">Kshitij Kabeer</maintainer>

  <license>GNU GPL v3.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
  
  <!-- <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <depend>gazebo_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>eigen_conversions</depend>
  <depend>tf</depend>
  <depend>tf_conversions</depend> -->

  <depend>GAZEBO</depend>

</package>