<?xml version="1.0"?>
<package format="2">
  <name>iarc_wave_sim</name>
  <version>0.1.2</version>
  <description>
    This package contains Gazebo plugins and models for simulating
    water waves for surface vessels.
  </description>
  <maintainer email="rhys.mainwaring@me.com">Rhys Mainwaring</maintainer>
  <license>GPLv3</license>
  <author email="rhys.mainwaring@me.com">Rhys Mainwaring</author>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>iarc_wave_sim_gazebo</exec_depend>
  <exec_depend>iarc_wave_sim_gazebo_plugins</exec_depend>
  <export>
    <metapackage />
  </export>
</package>
